# rustrix

./: Cargo.toml  README.md
src/: lib.rs
src/matrix/: mod.rs  ops.rs
