[package]
name = "rustrix"
license = "MIT"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/mk0218/rustrix"
description = "Supports macro and basic operations for matrix."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
